2006-07-11  Hynek Hanke  <hanke@brailcom.org>
	FSF address updated in all files.

2006-07-11  Hynek Hanke  <hanke@brailcom.org>
	
	* src/server/speechd.h: speechd_pid_file removed.

	* src/server/speechd.c (main): If pid_file specified on command
	line, use this one.

	* src/server/options.c (options_parse): Added pid_file.
	(SPD_OPTION_SET_STR): New macro.

	* src/server/speechd.h: Added pid_file to SpeechdOptions.

	* src/server/options.h: Added options pid-file.

2006-06-29  Olivier BERT  <obert01@mistigri.org>

	* src/modules/cicero.c: Updated Copyright in cicero.c
	* spe/modules/cicero.c: Replaced a fixed buffer size by a dynamic 
	  allocation


2006-06-29  Hynek Hanke  <hanke@brailcom.org>

	* config/modules/cicero.conf: Captions, debugging.

2006-06-27  Hynek Hanke  <hanke@brailcom.org>

	* src/Makefile.am: Include Python and Guile files in the
	distribution.

2006-06-22  Olivier BERT  <bert_o@epita.fr>

	* Added support for the cicero TTS (french and english).
	    Cicero TTS URL: www.cam.org/~nico/cicero
	* Updated config/speechd.conf.in to add the declaration of the
	 cicero module.
	* The specific documentation and files for the cicero module are
	  still at the following URL:
	  http://www.terramitica.net/projects/speech-dispatcher

2006-05-17  Hynek Hanke  <hanke@brailcom.org>

	* INSTALL: Users must run './configure' before 'make all'.

2006-05-13  Hynek Hanke  <hanke@brailcom.org>

	* README.packagers: Most information about IBM TTS moved to INSTALL.

	* INSTALL: Info about IBM TTS output module from README.packagers.

	* ChangeLog: Comments about documentation moved to doc/ChangeLog.

2006-05-07  Gary Cramblitt <garycramblitt@comcast.net>

	* config/modules/espeak-generic.conf: Support for pitch adjustment
	and better mappings.

2006-04-25  Gary Cramblitt <garycramblitt@comcast.net>

	* src/c/clients/say/say.c, options.h, options.c:

2006-04-23  Gary Cramblitt <garycramblitt@comcast.net>

	* config/modules/ibmtts.conf: * src/modules/ibmtts.c: *