@@ -1,0 +1,15 @@
+
+all:
+
+install:
+	./setup.py install
+
+uninstall:
+
+clean:
+	rm -f *.pyc
+
+distclean: clean
+
+check:
+
