@@ -1,0 +1,6 @@
+#!/usr/bin/python
+from distutils.core import setup
+setup(name='speechd',
+      version='0.3',
+      packages=['speechd'],
+      )
