@@ -1,3 +1,11 @@
+2006-07-13  Hynek Hanke  <hanke@brailcom.org>
+
+	* src/python/setup.py: Distutils setup.
+
+	* src/python/Makefile: New file.
+
+	* src/Makefile.am (SUBDIRS): +python
+
 2006-07-11  Hynek Hanke  <hanke@brailcom.org>
 	FSF address updated in all files.
 
